src/main/kotlin/icu/windea/starboundText/SbTextParser.bnf
{
  parserClass="icu.windea.starboundText.psi.SbTextParser"
  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"
  psiClassPrefix="SbText"
  psiImplClassSuffix="Impl"
  psiPackage="icu.windea.starboundText.psi"
  psiImplPackage="icu.windea.starboundText.psi.impl"
  elementTypeHolderClass="icu.windea.starboundText.psi.SbTextTypes"
  tokenTypeClass="icu.windea.starboundText.psi.SbTextTokenType"
  elementTypeClass="icu.windea.starboundText.psi.SbTextElementType"
  psiImplUtilClass="icu.windea.starboundText.psi.impl.SbTextPsiImplUtil"
  
  tokens=[
    COLOR_MARKER_START='^'
    COLOR_CODE='regexp:#?[0-9a-zA-Z]+'
    COLOR_MARKER_END=';'
    RESET_MARKER_TOKEN='^reset;'
    TRUNCATE_MARKER_TOKEN='^truncate;'
    
    VALID_ESCAPE_TOKEN="regexp:\\['\"rnt\\]"
    INVALID_ESCAPE_TOKEN='regexp:\\.'
    TEXT_TOKEN='regexp:[^\\]+'
  ]
}

root ::= (rich_text | reset_marker | truncate_marker) *
rich_text ::=  colorful_text | escape | string 
colorful_text ::=  color_marker string? reset_marker? {
  pin=1
  extends=rich_text
  mixin="icu.windea.starboundText.psi.impl.SbTextNamedElementImpl"
  implements="icu.windea.starboundText.psi.SbTextNamedElement"
  methods=[getName setName getNameIdentifier getTextOffset getColor setColor]
}
color_marker ::= COLOR_MARKER_START COLOR_CODE COLOR_MARKER_END {
  pin=1
  methods=[getColor]
}
reset_marker ::= RESET_MARKER_TOKEN
truncate_marker ::= TRUNCATE_MARKER_TOKEN
escape ::= VALID_ESCAPE_TOKEN | INVALID_ESCAPE_TOKEN{
  extends=rich_text
}
string ::= TEXT_TOKEN{
  extends=rich_text
}
